--- a/views/newCat.html
+++ b/views/newCat.html
@@ -29,7 +29,7 @@
                 <label for="cat-color">Cat Color</label>
                 <input type="text" id="cat-color" name="cat-color">
             </div>
-            <button type="submit">Add Cat</button>
+            <button id="cat-btn" type="button">Add Cat</button>
         </form>
     </main>
 </body>
